--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
-<script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
-<script>
-if (annyang) {
-  // Let's define our first command. First the text we expect, and then the function it should call
-  var commands = {
-    'show tps report': function() {
-      $('#tpsreport').animate({bottom: '-100px'});
-    }
-  };
+<!DOCTYPE html>
+<html>
+<head>
 
-  // Add our commands to annyang
-  annyang.addCommands(commands);
+	<script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js">
+	</script>
+	<script>
+	if (annyang) {
+	 // Let's define our first command. First the text we expect, and then the function it should call
+	 var commands = {
+	   'show tps report': function() {
+	     $('#tpsreport').animate({bottom: '-100px'});
+	   }
+	 };
 
-  // Start listening. You can call this here, or attach this call to an event, button, etc.
-  annyang.start();
-}
-</script>
+	 // Add our commands to annyang
+	 annyang.addCommands(commands);
+
+	 // Start listening. You can call this here, or attach this call to an event, button, etc.
+	 annyang.start();
+	}
+	</script>
+	<title></title>
+</head>
+<body>
+</body>
+</html>
